fixes alignment

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .animate-pulse {
   animation: pulse 1s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
@@ -65,6 +69,10 @@
   width: 3.75rem;
 }
 
+.w-30 {
+  width: 7.5rem;
+}
+
 .h-15 {
   height: 3.75rem;
 }
@@ -77,4 +85,10 @@
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-4 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
